--- a/css/_info.scss
+++ b/css/_info.scss
@@ -1,19 +1,20 @@
 .info-hero {
-   background:url(../images/two-rail1.jpg);
+   background:url(../images/two-rail.jpg);
    background-repeat:no-repeat;
-    background-position: 40% -30px;
+    background-position: 50% -40px;
     background-size:cover;
 
   
 }
 
 .info-section {
-    margin-top: -50px;
+    margin-top: -80px;
     background: white;
-    color: black;
+   
     h2 {
         margin-bottom: 30px;
         font-size:60px;
+    
 
      
     }
@@ -30,6 +31,7 @@
 
 .cable-section {
     background: $section-teal;
+    margin-bottom:80px;
     h2 {
         margin-bottom: 30px;
           font-size:60px;
@@ -43,6 +45,16 @@
         }
     }
 }
+
+.input-section{
+    h2{
+        color:black;
+        margin-bottom:15px;
+        font-size:60px;
+    }
+}
+
+
 
 input {
     font-size: 21px;
