--- a/css/_lessons.scss
+++ b/css/_lessons.scss
@@ -1,7 +1,8 @@
 .lessons-hero {
     background: url(../images/sesitec.jpg);
     background-size: cover;
-    background-position: 40% 0px;
+    background-repeat:no-repeat;
+    background-position:40%;
 }
 
 nav{
