--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,18 @@ h2,
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
   border: none; }
 
-.prices-section .col-md-4, .prices-section .col-md-6, .hours-section .col-md-4, .hours-section .col-md-6, .rental-section .col-md-4, .rental-section .col-md-6 {
+.prices-section .col-md-4, .prices-section .col-md-6, .hours-section .col-md-4, .hours-section .col-md-6, .rental-section .col-md-4, .rental-section .col-md-6, .about-section .col-md-4, .about-section .col-md-6 {
   padding-right: 0;
-  padding-left: 0; }
+  padding-left: 0;
+  background: green; }
+
+.pages-hero {
+  background-size: cover;
+  height: 468px; }
 
 .item {
   background-size: cover;
-  height: 468px; }
+  height: 700px; }
 
 .first {
   background-image: url(../images/girl-air1.jpg);
@@ -23,11 +28,11 @@ h2,
   background-repeat: no-repeat; }
 
 .second {
-  background-image: url(../images/teen-rider.jpg);
+  background-image: url(../images/teen-rider1.jpg);
   background-position: 50%; }
 
 .fourth {
-  background-image: url(../images/philip.jpg);
+  background-image: url(../images/rail-rider1.jpg);
   background-position: 80% 0px;
   background-size: cover; }
 
@@ -110,6 +115,10 @@ body {
 p, a {
   line-height: 1.8; }
 
+.row {
+  width: 100%;
+  margin: 0 auto; }
+
 .menu {
   font-size: 20px;
   font-weight: bold;
@@ -125,8 +134,8 @@ p {
   font-size: 17px; }
 
 .main-contain {
-  width: 93%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  background: red; }
 
 li:last-of-type {
   box-shadow: 0 10px 6px -6px rgba(0, 0, 0, 0.5); }
@@ -554,8 +563,7 @@ footer {
     color: black; }
 
 .questions-hero {
-  background-image: url(../images/boots-change2.jpg);
-  background-position: top left; }
+  background-image: url(../images/boots-change2.jpg); }
 
 .questions-contain {
   margin-top: -40px; }
@@ -581,15 +589,14 @@ footer {
   .questions-contain h3 {
     margin-top: 0; } }
 .info-hero {
-  background: url(../images/two-rail1.jpg);
+  background: url(../images/two-rail.jpg);
   background-repeat: no-repeat;
-  background-position: 40% -30px;
+  background-position: 50% -40px;
   background-size: cover; }
 
 .info-section {
-  margin-top: -50px;
-  background: white;
-  color: black; }
+  margin-top: -80px;
+  background: white; }
   .info-section h2 {
     margin-bottom: 30px;
     font-size: 60px; }
@@ -601,12 +608,18 @@ footer {
     margin-top: 80px; }
 
 .cable-section {
-  background: #3fa6ad; }
+  background: #3fa6ad;
+  margin-bottom: 80px; }
   .cable-section h2 {
     margin-bottom: 30px;
     font-size: 60px; }
   .cable-section .top-img:first-of-type p {
     margin-bottom: 120px; }
+
+.input-section h2 {
+  color: black;
+  margin-bottom: 15px;
+  font-size: 60px; }
 
 input {
   font-size: 21px;
@@ -635,7 +648,8 @@ input {
 .lessons-hero {
   background: url(../images/sesitec.jpg);
   background-size: cover;
-  background-position: 40% 0px; }
+  background-repeat: no-repeat;
+  background-position: 40%; }
 
 nav .logo-fix {
   margin-left: 35px; }
@@ -708,7 +722,10 @@ nav .logo-fix {
     font-size: 22px; }
 
   .wavier-section .wavier-btn {
-    width: 40%; } }
+    width: 40%; }
+
+  .lessons-info-section h2, .questions-contain h2 {
+    color: green; } }
 @media screen and (min-width: 768px) {
   .menu {
     font-size: 26px;
@@ -742,14 +759,31 @@ nav .logo-fix {
       padding-top: 15px; }
 
   .lessons-price-container {
-    margin-top: 0; } }
-@media screen and (min-width: 992px) {
-  .logo p {
-    font-size: 30px;
-    margin-top: -35px; }
-
-  .info-section h3 {
     margin-top: 0; }
+
+  .lessons-hero {
+    background-position: 40% -60px; }
+
+  .questions-hero {
+    background-position: 0% -50px; }
+
+  .lessons-info-section h2, .questions-contain h2 {
+    color: red; }
+
+  .info-section h2 {
+    margin-bottom: 80px;
+    font-size: 80px; }
+  .info-section h3 {
+    margin-top: -4px; }
+  .info-section .img-fix {
+    width: 85%; }
+
+  .cable-section h2 {
+    margin-bottom: 50px;
+    font-size: 80px; }
+
+  .programs-section h3 {
+    margin-top: -5px; }
 
   .all-padding {
     padding-top: 160px;
@@ -800,9 +834,9 @@ nav .logo-fix {
       font-size: 115px;
       margin-top: 35px; }
 
-  .item {
+  .pages-hero {
     background-size: cover;
-    height: 625px; }
+    height: 525px; }
 
   .first {
     background-image: url(../images/girl-air.jpg);
@@ -828,12 +862,6 @@ nav .logo-fix {
 
   li {
     box-shadow: 0 10px 6px -6px rgba(0, 0, 0, 0.5); }
-
-  .prices-container, .rental-prices, .hours-prices {
-    margin-right: .45%;
-    width: 33%; }
-    .prices-container:last-of-type, .rental-prices:last-of-type, .hours-prices:last-of-type {
-      margin-right: 0%; }
 
   .prices-section .prices-container {
     margin-bottom: 0; }
@@ -867,9 +895,6 @@ nav .logo-fix {
     .hours-section .hours-bar-large .none {
       display: block; }
 
-  .programs-section h3 {
-    margin-top: 0; }
-
   .program-marg-large {
     margin-bottom: 160px; }
 
@@ -886,14 +911,25 @@ nav .logo-fix {
     padding-left: 15px; }
 
   input {
-    width: 50%; } }
-@media screen and (min-width: 1200px) {
-  .prices-container, .rental-prices {
-    margin-right: .45%;
-    width: 33%; }
-    .prices-container:last-of-type, .rental-prices:last-of-type {
-      margin-right: 0%; }
+    width: 50%; }
 
+  .lessons-info-section h2, .questions-contain h2 {
+    color: purple; }
+  .lessons-info-section .questions-hero, .questions-contain .questions-hero {
+    background-position: 0% -170px; }
+
+  .lessons-hero {
+    background-position: 40% -120px; }
+
+  .input-section h2 {
+    color: black;
+    margin-bottom: 30px;
+    font-size: 80px; } }
+@media screen and (min-width: 992px) {
+  .logo p {
+    font-size: 30px;
+    margin-top: -35px; } }
+@media screen and (min-width: 1200px) {
   .prices-section, .location-section, .programs-section {
     margin-top: -190px; }
 
@@ -905,6 +941,15 @@ nav .logo-fix {
     width: 40%; }
 
   .form-btn {
-    width: 40%; } }
+    width: 40%; }
+
+  .lessons-info-section h2, .questions-contain h2 {
+    color: pink; }
+
+  .lessons-hero {
+    background-position: 40% -270px; }
+
+  .questions-hero {
+    background-position: 0% -230px; } }
 
 /*# sourceMappingURL=style.css.map */
