--- a/css/_info.scss
+++ b/css/_info.scss
@@ -26,6 +26,12 @@
     .history-section {
         margin-top: 80px;
     }
+    .img-fix{
+        width:80%;
+        margin:0 auto;
+        display:block;
+    }
+    
 }
 
 .cable-section {
