--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -83,6 +83,27 @@
     }
 
 
+.first-time-section{
+    p{
+        &:nth-child(odd){
+            padding-bottom:120px;
+        }
+    }
+}
+
+.info-section {
+    h2{
+         margin-bottom: 80px;
+        font-size:80px;
+    }
+    
+    .img-fix{
+        width:75%;
+
+    }
+}
+
+
 }
 
 @media screen and (min-width: 992px) {
@@ -156,7 +177,7 @@
         margin-top: -30px;
     }
     .container {
-        max-width: 80%;
+        max-width: 100%;
     }
     .btn {
         width: 50%;
@@ -175,7 +196,7 @@
     }
     .item {
         background-size: cover;
-        height: 625px;
+        height: 550px;
     }
     .first {
         background-image: url(../images/girl-air.jpg);
@@ -283,6 +304,17 @@
     input {
         width: 50%;
     }
+
+
+.info-section {
+   
+    
+    .img-fix{
+        margin:0;
+        
+    }
+}
+
 
 }
 
