--- a/css/style.scss
+++ b/css/style.scss
@@ -135,6 +135,10 @@ li {
     display: inline-block;
 }
 
+.kern{
+     letter-spacing: -3px;
+}
+
 /* Helpers for top position on internal page links
 ====================================================*/
 
@@ -617,10 +621,11 @@ footer {
             text-shadow: none;
         }
         p {
-            margin-top: -5px;
+            margin-top: -8px;
+            margin-right:-5px;
             margin-bottom: 0;
             font-size: 14px;
-            color: black;
+            color:black;
             text-shadow: none;
         }
     }
