--- a/css/_bootchange.scss
+++ b/css/_bootchange.scss
@@ -7,7 +7,7 @@ h2,
     border:none;
 }
 .prices-section, .hours-section, .rental-section {
-    .col-md-4, .col-md-6 {
+    .col-sm-4, .col-md-4, .col-md-6 {
         padding-right: 0;
         padding-left: 0;
     }
