--- a/css/style.css
+++ b/css/style.css
@@ -328,8 +328,7 @@ li:last-of-type {
 /* Wavier Section
 ===================================*/
 .btn-container {
-  background: red;
-  max-width: 310px;
+  max-width: 342px;
   margin: 0 auto; }
 
 .wavier-section {
@@ -337,10 +336,10 @@ li:last-of-type {
   .wavier-section h2 {
     margin-bottom: 15px; }
   .wavier-section p {
-    font-size: 15px;
     text-align: center; }
   .wavier-section .wavier-btn {
-    margin: 30px auto;
+    display: block;
+    margin: 10px auto;
     background: #96d59e;
     font-weight: 800;
     font-size: 22px;
@@ -525,7 +524,8 @@ li:last-of-type {
 /* Footer Styles
 ===================================*/
 footer {
-  height: 400px;
+  padding-top: 220px;
+  padding-bottom: 140px;
   width: 100%;
   background: #373235;
   margin-top: -50px; }
@@ -536,9 +536,12 @@ footer {
       width: 50px;
       display: inline-block;
       float: left;
-      margin-right: 30px; }
+      margin-right: 30px;
+      margin-bottom: 30px; }
       footer .social-container .svg:last-of-type {
         margin-right: 0; }
+  footer p {
+    text-align: center; }
 
 .top {
   display: none;
@@ -738,6 +741,9 @@ nav .logo-fix {
   li {
     box-shadow: 0 10px 6px -6px rgba(0, 0, 0, 0.5); }
 
+  .events-section li {
+    box-shadow: none; }
+
   .prices-container, .rental-prices, .hours-prices {
     margin-right: .45%;
     width: 33%; }
@@ -753,7 +759,7 @@ nav .logo-fix {
     padding-right: 0; }
 
   .main-contain {
-    width: 97.5%;
+    width: 97%;
     margin: 0 auto; }
 
   input {
@@ -786,16 +792,23 @@ nav .logo-fix {
   .btn {
     display: inline-block; } }
 @media screen and (min-width: 992px) {
+  .main-contain {
+    width: 97.5%;
+    margin: 0 auto; }
+
   .logo p {
     font-size: 30px;
     margin-top: -35px; }
 
   .info-section h3 {
-    margin-top: 0; }
+    margin-top: -4px; }
 
   .all-padding {
     padding-top: 160px;
     padding-bottom: 160px; }
+
+  .events-section h3 {
+    margin-top: -4px; }
 
   .lessons-price-section {
     margin-top: 0px;
@@ -822,7 +835,7 @@ nav .logo-fix {
   .lessons-info-section h2 {
     margin-bottom: 80px; }
   .lessons-info-section h3 {
-    margin-top: 0; }
+    margin-top: -5px; }
 
   .section-img {
     margin-top: -30px; }
@@ -898,11 +911,6 @@ nav .logo-fix {
 
   .program-marg-large {
     margin-bottom: 160px; }
-
-  .events-section h3 {
-    margin-top: -4px; }
-  .events-section li {
-    box-shadow: none; }
 
   .calender-btn {
     width: 70%; }
