--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -113,7 +113,13 @@
     .btn {
         display:inline-block;
     }
+.lessons-info-section{
+    .img-fix{
+        width:75%;
 
+    }
+
+}
 
 
 }
